Revert "Robust Pending Status Check & Email Verification"

--- a/Denied.html
+++ b/Denied.html
@@ -116,24 +116,15 @@
 
   <script>
     document.getElementById('display-email').textContent = userEmail;
-    console.log("Status:", userStatus, "Infotep:", isInfotep);
 
     if (!isInfotep) {
        document.getElementById('view-domain').classList.remove('hidden');
-    } else if (userStatus && userStatus.toUpperCase().trim() === 'PENDIENTE') {
+    } else if (userStatus === 'PENDIENTE') {
        document.getElementById('view-pending').classList.remove('hidden');
-    } else if (userStatus && userStatus.toUpperCase().trim() === 'INACTIVO') {
+    } else if (userStatus === 'INACTIVO') {
        document.getElementById('view-inactive').classList.remove('hidden');
     } else {
-       // Check client-side for status PENDIENTE as double check
-       google.script.run.withSuccessHandler(function(status) {
-          if (status && status === 'PENDIENTE') {
-             document.getElementById('view-new').classList.add('hidden');
-             document.getElementById('view-pending').classList.remove('hidden');
-          } else {
-             document.getElementById('view-new').classList.remove('hidden');
-          }
-       }).apiCheckUserStatus();
+       document.getElementById('view-new').classList.remove('hidden');
     }
 
     function openModal() { document.getElementById('modal').classList.remove('hidden'); }
